# clacky-ai-paas-dsagent/internal/server/grpc.go
@@ -7,6 +7,7 @@ import (
 	ecrv1 "dsagent/api/ecr/v1"
 	containerv1 "dsagent/api/container/v1"
 	eventsv1 "dsagent/api/events/v1"
+	nydusifyv1 "dsagent/api/nydusify/v1"
 	"dsagent/internal/conf"
 	"dsagent/internal/service"
 
@@ -16,7 +17,7 @@ import (
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, health *service.HealthService, imageService *service.ImageServiceV2, ecrService *service.ECRService, containerService *service.ContainerService, eventsService *service.EventsService, logger log.Logger) *grpc.Server {
+func NewGRPCServer(c *conf.Server, health *service.HealthService, imageService *service.ImageServiceV2, ecrService *service.ECRService, containerService *service.ContainerService, eventsService *service.EventsService, nydusifyService *service.NydusifyService, logger log.Logger) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
@@ -38,5 +39,6 @@ func NewGRPCServer(c *conf.Server, health *service.HealthService, imageService *
 	ecrv1.RegisterECRServiceServer(srv, ecrService)
 	containerv1.RegisterContainerServiceServer(srv, containerService)
 	eventsv1.RegisterEventsServiceServer(srv, eventsService)
+	nydusifyv1.RegisterNydusifyServiceServer(srv, nydusifyService)
 	return srv
 }
